--- a/svm.ipynb
+++ b/svm.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,26 +13,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "filename = \"../100-Days-Of-ML-Code/datasets/Social_Network_Ads.csv\"\n",
-    "dataset = pd.read_csv(filepath_or_buffer=filename)\n",
     "\n",
+    "dataset = pd.read_csv(filepath_or_buffer=filename)\n",
     "data = dataset.iloc[:,[2,3]].values\n",
     "labels = dataset.iloc[:,-1].values"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.model_selection import train_test_split\n",
     "test_size = 0.25\n",
     "random_state = 2019\n",
+    "\n",
     "train_data,test_data,train_labels,test_labels = train_test_split(data,\n",
     "                                                                labels,\n",
     "                                                                test_size = test_size,\n",
@@ -41,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,39 +54,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.svm import SVC\n",
     "\n",
-    "n_estimators = 10\n",
-    "criterion = \"entropy\"\n",
+    "kernel = \"linear\"\n",
     "random_state = 2019\n",
     "\n",
-    "cls = RandomForestClassifier(n_estimators=n_estimators,\n",
-    "                            criterion=criterion,\n",
-    "                            random_state=random_state)"
+    "cls = SVC(kernel = kernel,\n",
+    "         random_state = random_state)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "RandomForestClassifier(bootstrap=True, class_weight=None, criterion='entropy',\n",
-       "                       max_depth=None, max_features='auto', max_leaf_nodes=None,\n",
-       "                       min_impurity_decrease=0.0, min_impurity_split=None,\n",
-       "                       min_samples_leaf=1, min_samples_split=2,\n",
-       "                       min_weight_fraction_leaf=0.0, n_estimators=10,\n",
-       "                       n_jobs=None, oob_score=False, random_state=2019,\n",
-       "                       verbose=0, warm_start=False)"
+       "SVC(C=1.0, cache_size=200, class_weight=None, coef0=0.0,\n",
+       "    decision_function_shape='ovr', degree=3, gamma='auto_deprecated',\n",
+       "    kernel='linear', max_iter=-1, probability=False, random_state=2019,\n",
+       "    shrinking=True, tol=0.001, verbose=False)"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -96,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,42 +101,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.metrics import confusion_matrix"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 43,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "c_matrix = confusion_matrix(y_true=test_labels,\n",
-    "                           y_pred=y_pred)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 44,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[57,  8],\n",
-       "       [ 6, 29]])"
-      ]
-     },
-     "execution_count": 44,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "c_matrix"
    ]
   },
   {
